feat: verify native output parity